<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CMDB</string>

    <string name="title_categories">Categories</string>
    <string name="title_advanced_search">Advanced Search</string>
    <string name="title_random_movies">Random Movies</string>
    <string name="title_upload_source">Upload Source</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="action_search_hint">Search Hint</string>
    <string name="action_settings">Settings</string>

    <string name="btn_more_random">More</string>
    <string name="btn_select_file">Select File</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_search_movies">Search</string>

    <string name="tv_choose_xml">Choose XML File</string>

    <string name="label_movie_title">Title</string>
    <string name="label_movie_category">Category</string>
    <string name="label_movie_director">Director: </string>
    <string name="label_movie_actors">Actors: </string>
    <string name="label_movie_rate">Rate: </string>
    <string name="label_movie_rated">Rated: </string>
    <string name="label_movie_runtime">Runtime: </string>
    <string name="label_movie_year_release">Year Release: </string>
    <string name="label_movie_summary">Summary </string>
    <string name="label_movie_file_name">File Name: </string>
    <string name="label_movie_file_size">File Size: </string>
    <string name="label_movie_remarks">Remarks</string>
    <string name="label_movie_reviews">Reviews</string>

    <string name="label_movie_director_plain">Director</string>
    <string name="label_movie_actors_plain">Actor</string>
    <string name="label_movie_rate_plain">Rate</string>
    <string name="label_movie_rated_plain">Rated</string>
    <string name="label_movie_runtime_plain">Runtime</string>
    <string name="label_movie_year_release_plain">Year Release</string>

    <string name="min_year">1960</string>

    <string-array name="rated_array">
        <item></item>
        <item>G</item>
        <item>PG</item>
        <item>PG-13</item>
        <item>R</item>
        <item>R-18</item>
    </string-array>
</resources>
